added content to Landing page

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -8,5 +8,6 @@
 
 // Pages
 @import "../pages/utils/sharedLayout";
+@import "../pages/Landing/landing";
 @import "../pages/Home/home";
 @import "../pages/Error/error";
