--- a/client/src/components/Footer/_footer.scss
+++ b/client/src/components/Footer/_footer.scss
@@ -1,4 +1,10 @@
 .footer {
+    // background-color: $light-bg;
+    padding: 2rem;
 
-    
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    width: 100%;
 }
