--- a/client/src/components/Navigation/_navigation.scss
+++ b/client/src/components/Navigation/_navigation.scss
@@ -1,15 +1,20 @@
 .navigation {
-    background-color: $light-bg;
-    padding: 1rem;
+    background-color: $light-primary;
+    padding: 2rem;
 
-    &-content{
+    &-close {
+        color: black
+    }
+
+
+    &-content {
         color: black;
+        display: flex;
+        justify-content: space-between;
 
-
-        &-link {
+        &-menu {
             display: inline;
-            padding-block: 20px;
-            padding-inline: 30px;
+            padding-inline: 20px;
             text-decoration: none;
             color: white;
             height: 100%;
