Add Dashboard Page Template

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -8,5 +8,6 @@
 
 // Pages
 @import "../pages/utils/sharedLayout";
-@import "../pages/Home/home";
+@import "../pages/Dashboard/dashboard";
+@import "../pages//Landing/landing";
 @import "../pages/Error/error";
