Update Pie Chart styling

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -5,6 +5,7 @@
 // Components
 @import "../components/Navigation/navigation";
 @import "../components/Footer/footer";
+@import "../components/GraphProfile/graphProfile";
 
 // Pages
 @import "../pages/utils/sharedLayout";
