Add nav links to Profile Page

--- a/client/src/pages/Dashboard/_dashboard.scss
+++ b/client/src/pages/Dashboard/_dashboard.scss
@@ -1,8 +1,9 @@
 .dashboard {
 
-  &-card{
-    border: 0;    
-  }
+  // &-card{
+  //   border: 0;
+  //   min-width: 180px;    
+  // }
 
    &-image {
     max-width: 250px;
