minor changes, installed font awesome icons, updated navbar to Marcin's idea, added button to toggle light/dark modeto navbar (no functionality yet though0

--- a/client/src/components/Footer/_footer.scss
+++ b/client/src/components/Footer/_footer.scss
@@ -6,5 +6,10 @@
     left: 0;
     position: absolute;
     right: 0;
+    display: flex;
     width: 100%;
+
+    &-column {
+        color: red;
+    }
 }
