Add dropdown component to Questions

--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -12,4 +12,5 @@
 @import "../pages/utils/sharedLayout";
 @import "../pages//Landing/landing";
 @import "../pages/Dashboard/dashboard";
+@import "../pages/AllQuestions/allQuestions";
 @import "../pages/Error/error";
