--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import "../components/Footer/footer";
 @import "../components/ProfileGraph/profileGraph";
 @import "../components/ProfileNav/profileNav";
+@import "../components/DropDown/dropdown";
 
 // Pages
 @import "../pages/utils/sharedLayout";
