--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -12,6 +12,13 @@
 // Pages
 @import "../pages/utils/sharedLayout";
 @import "../pages//Landing/landing";
-@import "../pages/Dashboard/dashboard";
 @import "../pages/AllQuestions/allQuestions";
+@import "../pages/Topics/topics";
+@import "../pages/Contribute/contribute";
+@import "../pages/Dashboard/dashboard";
+@import "../pages/Favourites/favourites";
+@import "../pages/Settings/settings";
+@import "../pages/Help/help";
+@import "../pages/Login/login";
+@import "../pages/Signup/signup";
 @import "../pages/Error/error";
