--- a/client/src/pages/AllQuestions/_allQuestions.scss
+++ b/client/src/pages/AllQuestions/_allQuestions.scss
@@ -4,4 +4,16 @@
     display: flex;
     gap: 15px;
   }
+
+  &-list-btn:first-of-type {
+    margin-right: 10px;
+  }
+
+  &-list-level {
+    display: inline-block;
+    background: grey;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+  }
 }
