--- a/client/src/pages/Landing/_landing.scss
+++ b/client/src/pages/Landing/_landing.scss
@@ -1,4 +1,11 @@
 .landing {
+    display: flex;
+    height: 100vh;
+    overflow:hidden;
+    font-family: "Fira Sans", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+
     
     
 }
