--- a/client/src/components/Footer/_footer.scss
+++ b/client/src/components/Footer/_footer.scss
@@ -1,15 +1,12 @@
 .footer {
-    // background-color: $light-bg;
-    padding: 2rem;
-
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    right: 0;
+    
     display: flex;
-    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 0 auto;
 
-    &-column {
-        color: red;
-    }
+    &-contact > a {
+        padding : 5px;
+        color: black;
+    }  
 }
